[tool.poetry]
name = "ntmlv2 client-server"
version = "0.1.0"
description = ""
authors = ["Nikita Ulianov"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"

[tool.poetry.scripts]
test = "pytest --cov=src"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
addopts = "--capture=no --cov --cov-report xml:coverage.xml --cov-report html --cov-report term-missing -m 'not slow'"
asyncio_mode = "auto"

[tool.coverage.report]
show_missing = true

exclude_lines = [
    "pragma: no cover",
    "@overload",
    "@abstractmethod",
    'if __name__ == "__main__":',
    "if TYPE_CHECKING:",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
